--- a/WEB/README
+++ b/WEB/README
@@ -18,12 +18,13 @@ Style directory
 ---------------
 eugene.css
 
-JavaS directory : javasrcipts
+Javascripts directory
 -----------------------------
 cm_addins.js	|
 coolmenus4.js	| -> menu
 euG_menu.js	|
 bulle.js
+diap.js
 
 Images directory
 ----------------
