--- a/Debianization/README
+++ b/Debianization/README
@@ -15,16 +15,21 @@ Memory of the original debian directory:
 debian
 
 
-How was done the package
-------------------------
+How to build the package inra-eugene
+------------------------------------
 
-1. Copy a tar.gz distribution of eugene
-2. Move eugene-3.2 in inra-eugene-3.2 directory
+1. Copy a eugene-<no>.tar.gz distribution of eugene and extract it
+2. Move eugene-<no> in inra-eugene-<no> directory
    (be sure to have the last Makefile.am and .in that 
     does not provide execute permision when no necessary,
     this avoid a lintian warning)
-4. dh_make  -c artistic -e cros@ossau.toulouse.inra.fr -s
-5. Update the inra-eugene-3.2/debian directory 
+4. Go in the inra-eugene-<no> directory and execute:
+    dh_make  --copyright artistic -e cros@ossau.toulouse.inra.fr -s
+5. Update the inra-eugene-<no>/debian directory 
+    If minor modifications were done, remove the created debian directory
+    and copy Debianization/debian directory at the same place.
+    Note that updating the files changelog and copyrigth (if <no> has changed) 
+    may be sufficient.
 6. Empty environnement variables: CFLAGS, CXXFLAGS, CPPFLAGS
 7. debuild -rfakeroot --preserve-env
 
@@ -35,10 +40,17 @@ Note that the following packages need to be installed:
 * fakeroot
 * gnupg (generation of a key with gpg --gen-key)
 
+It is possible to test the installation with:
+  dpkg -i inra-eugene_<no>-1_i386.deb
+  eugene doc/Sequences/SYNO_ARATH.fasta
+  dpkg -r inra-eugene
 
 What remains
 ------------
 1. Check of the Build-Depends defined in the debian/control file
 2. Improve of the man documentation
+
+3. Remove of the warning "Compatibility levels before 3 are deprecated." 
+    appeared with the 3.3 packaging.
 
 
