--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -42,12 +42,18 @@ The behavior of the plugin is controlled by 4 parameters:
   inside intronless EST. If a given Donor with scores $a|b$ such that
   $\log(\frac{a}{b}) >T$ then the intronless EST is rejected because
   it goes through a very strong donor site.
-  \item \texttt{Est.MinDangling} gives the minimum length of the first and last
-  match region in a genomic spliced alignment. If the length is below this, then it is assumed to be a false match and
-it is ignored.
-\item \texttt{Est.MaxIntron} gives the maximum length for the first and last gap (representing introns) in
-a spliced alignment. If the length exceeds this maximum, then the corresponding regions are
-ignored in the alignment.
+\item \texttt{Est.MinDangling} gives the minimum length of the first
+  and last match region in a genomic spliced alignment. If the length
+  is below this, then it is assumed to be a false match and it is
+  ignored.
+\item \texttt{Est.MaxIntron} gives the maximum length for the first
+  and last gap (representing introns) in a spliced alignment. If the
+  length exceeds this maximum, then the corresponding regions are
+  ignored in the alignment (the long gap and the dangling hit).
+\item \texttt{Est.MaxInternalIntron} gives the maximum length for any
+  gap (representing an intron) in a spliced alignment. If the length
+  exceeds this maximum, then the corresponding gap is ignored as
+  a probable bad spliced alignment or chimeric data..
 \end{itemize}
 
 The sensor is also capable of a postprocessing analyse described below
