--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -34,14 +34,15 @@
   \EuGene\ is a sophisticated open gene finder for eukaryotic
   organisms. It has been developped thanks to funding by INRA
   (permanent scientists and engineers), G\'enoplante and the french
-  ministry of research (with one PhD student). It generates text, HTML and graphical outputs.
+  ministry of research (with one PhD student). It generates text, HTML
+  and graphical outputs.
   
   \EuGene\ uses a graph based model to predict genes that covers both
   HMM based or more complex Bayesian net based probabilistic
   predictions. The model is fixed but complex (with 43 different
-  states) and covers Exon, Intron, UTR, UTR introns\ldots each with a possible explicit
-  distribution on length. The prediction itself relies on an optimal
-  linear time and space algorithm for prediction.
+  states) and covers Exon, Intron, UTR, UTR introns\ldots each with a
+  possible explicit distribution on length. The prediction itself
+  relies on an optimal linear time and space algorithm for prediction.
   
   Even if the gene model is fixed, the sources of information taken
   into account be \EuGene\ for prediction are extremely varied and can
@@ -375,8 +376,16 @@ sensitive. The definition order is not important.
   no FASTA id is available). This is truncated to the number of
   caracters indicated. If set to 0 (or FALSE), the full id is used.
 
-\item \texttt{Output.MinCDSLen}: any predicted gene whose CDS length in number of nucleotides is lower than this is
-filtered out from the output.
+\item \texttt{Output.MinCDSLen}: any predicted gene whose CDS length
+  in number of nucleotides is lower than this is filtered out from the
+  output.
+
+\item \texttt{Output.UTRtrim}: EuGene is natively capable of
+  predicting UTR. If desired however, the UTR prediction of EuGene can
+  be trimmed to be exactly consistent with the transcript evidence
+  available as provided by the Est plugin. If no EST evidence is
+  available, this means that all UTR predictions will be removed from
+  the output.
 
 \item \texttt{Output.stepid}: in the text output, step for numbering genes.
 
